# Injec

./: App.xaml  App.xaml.cs  Injec.csproj  Injec.slnx  InjecModules.cs  InjecProcess.cs  MainWindow.xaml  MainWindow.xaml.cs  ModulesProcessInfo.xaml  ModulesProcessInfo.xaml.cs  packages.config
Injec/: CMakeLists.txt
Injec/src/: Injec.cpp
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
